--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             </p>
 
             <a href="#" class="btn has-before">
-              <span class="span">Download CV adfadf</span>
+              <span class="span">Download</span>
 
               <ion-icon name="download-outline" aria-hidden="true"></ion-icon>
             </a>
