--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             </p>
 
             <a href="#" class="btn has-before">
-              <span class="span">Download</span>
+              <a class="span" target='download'>Download CV</a>
 
               <ion-icon name="download-outline" aria-hidden="true"></ion-icon>
             </a>
