--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
               creating captivating products.
             </p>
 
-            <a href="#" class="btn has-before">
-              <a class="span" target='download'>Download CV</a>
+            <a class="btn has-before" href="./MyResume.rar" download>
+              <span class="span">Download CV</span>
 
               <ion-icon name="download-outline" aria-hidden="true"></ion-icon>
             </a>
