--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
               creating captivating products.
             </p>
 
-            <a class="btn has-before" href="./MyResume.rar" download>
+            <a class="btn has-before" href="./assets/MyResume.rar" download>
               <span class="span">Download CV</span>
 
               <ion-icon name="download-outline" aria-hidden="true"></ion-icon>
