--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <h1 class="h1 hero-title">Fukuyoshi Imami</h1>
 
             <p class="hero-subtitle">
-              Web Developer & Mobile App Developer
+              Blockchain & Web Developer & Mobile App Developer
             </p>
 
             <div class="hero-banner">
@@ -129,7 +129,7 @@
             </div>
 
             <p class="section-text">
-              Hi, I’m Fukuyoshi Imami and I am creative web & mobile app developer who dream making the world better place by
+              Hi, I’m Fukuyoshi Imami and I am creative Blockchain & Web & mobile app developer who dream making the world better place by
               creating captivating products.
             </p>
 
